--- a/.github/workflows/fly-deploy-qsochat.yml
+++ b/.github/workflows/fly-deploy-qsochat.yml
@@ -1,15 +1,15 @@
-name: fly-deploy
+name: fly-deploy-couchdb
 on:
     push:
         paths:
-            - 'fly/**'
+            - 'fly/applications/qsochat'
 jobs:
     deploy:
-        name: Deploy app
+        name: Deploy 
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
             - uses: superfly/flyctl-actions/setup-flyctl@master
-            - run: flyctl deploy --remote-only
+            - run: flyctl deploy fly/applications/qsochat --remote-only
         env:
             FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
