--- a/.github/workflows/fly-deploy-couchdb.yml
+++ b/.github/workflows/fly-deploy-couchdb.yml
@@ -5,7 +5,7 @@ on:
             - 'fly/applications/couchdb/**'
 jobs:
     deploy:
-        name: Deploy 
+        name: Deploy couchdb
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
