--- a/.github/workflows/fly-deploy-qsochat.yml
+++ b/.github/workflows/fly-deploy-qsochat.yml
@@ -10,6 +10,6 @@ jobs:
         steps:
             - uses: actions/checkout@v3
             - uses: superfly/flyctl-actions/setup-flyctl@master
-            - run: flyctl deploy fly/applications/qsochat --remote-only
+            - run: flyctl deploy fly/applications/qsochat --remote-only --build-secret HAMQTH_CALL=${{ secrets.HAMQTH_CALL }} --build-secret HAMQTH_PASSWORD=${{ secrets.HAMQTH_PASSWORD }}
         env:
             FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
