fix: secrets 2 electric boogaloo

--- a/fly/applications/qsochat/Dockerfile
+++ b/fly/applications/qsochat/Dockerfile
@@ -8,8 +8,9 @@ RUN apk update \
     && npm install
 
 RUN --mount=type=secret,id=HAMQTH_CALL \
-    HAMQTH_CALL=$(cat /run/secrets/HAMQTH_CALL) \
-    --mount=type=secret,id=HAMQTH_PASSWORD \
+    HAMQTH_CALL=$(cat /run/secrets/HAMQTH_CALL)
+
+RUN --mount=type=secret,id=HAMQTH_PASSWORD \
     HAMQTH_PASSWORD=$(cat /run/secrets/HAMQTH_PASSWORD)
 
 CMD npm start
