fix: add dotenv

--- a/fly/applications/qsochat/Dockerfile
+++ b/fly/applications/qsochat/Dockerfile
@@ -7,10 +7,10 @@ RUN apk update \
     && apk add nodejs npm \
     && npm install
 
-RUN --mount=type=secret,id=HAMQTH_CALL \
-    HAMQTH_CALL=$(cat /run/secrets/HAMQTH_CALL)
+# RUN --mount=type=secret,id=HAMQTH_CALL \
+#     HAMQTH_CALL=$(cat /run/secrets/HAMQTH_CALL)
 
-RUN --mount=type=secret,id=HAMQTH_PASSWORD \
-    HAMQTH_PASSWORD=$(cat /run/secrets/HAMQTH_PASSWORD)
+# RUN --mount=type=secret,id=HAMQTH_PASSWORD \
+#     HAMQTH_PASSWORD=$(cat /run/secrets/HAMQTH_PASSWORD)
 
 CMD npm start
