--- a/fly/applications/qsochat/ChatServer/package.json
+++ b/fly/applications/qsochat/ChatServer/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.4",
     "cradle": ">= 0.7.1",
     "debug": ">= 3.1.0",
+    "dotenv": "^16.3.1",
     "express": "~4.16.1",
     "fs": "latest",
     "http-errors": "~1.6.3",
